# eeg-mindflex

./: LICENSE  README.md  client.py  gptplot.py  interpret.py  plot.py  pyproject.toml  requirements.txt
app/: average.py  gui.py  main.py  model.py  operating_system.py  parser.py  pyproject.toml  tasks.py
